--- a/metadata.yaml
+++ b/metadata.yaml
@@ -35,5 +35,6 @@ subjects:
 - !lcsh 'Animals -- Juvenile fiction'
 - !lcsh 'Children -- Conduct of life -- Juvenile fiction'
 - !lcsh 'Florida -- Description and travel'
+- GITenberg
 title: Down South; or, Yacht Adventure in Florida
 url: http://www.gutenberg.org/ebooks/24554
